[package]
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>", "Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for NXP KL25Z microcontrollers"
documentation = "https://docs.rs/crate/mkl25z4"
keywords = ["arm", "cortex-m", "nxp", "kinetis", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "mkl25z4"
repository = "https://github.com/mgottschlag/mkl25z4"
version = "0.0.3"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.5.0, <0.7.0"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
